// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpertApp renders correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`GifExpertApp should show list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Boku no Hero"
      key="Boku no Hero"
    />
    <GifGrid
      category="Final fantasy"
      key="Final fantasy"
    />
  </ol>
</Fragment>
`;
